# python-strongly-connected-components

./: .gitignore  Makefile  README.md  pyproject.toml
src/strongly_connected_components/: __init__.py  scc.py
