[project]
name = "strongly-connected-components"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julian Bertram", email = "tirednesscankill@warhog.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
